window.appAlert is the new alert(). tell your frens

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -52,8 +52,8 @@ html {
   height: 80%;
   overflow: scroll;
   position: relative; }
-  #loginPage .contentBubble #login_button, #profilePage .contentBubble #login_button,
-  #editProfilePage .contentBubble #login_button {
+  #loginPage .contentBubble #login_button_internal, #profilePage .contentBubble #login_button_internal,
+  #editProfilePage .contentBubble #login_button_internal {
     background: url("../assets/button_background.jpg");
     color: white;
     font-weight: normal;
@@ -112,11 +112,21 @@ html {
     -mox-border-radius: 5px;
     -webkit-border-radius: 5px;
     -o-border-radius: 5px;
+    padding: 3px; }
+  #loginPage .contentBubble #logout_button, #profilePage .contentBubble #logout_button,
+  #editProfilePage .contentBubble #logout_button {
+    position: absolute;
+    top: 40px;
+    right: 10px;
+    text-decoration: none;
+    color: #e8e8e8;
+    background-color: #424242;
+    border-radius: 5px;
+    -mox-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
     padding: 3px;
-    border: solid thin #5a5a5a;
-    box-shadow: 0 0 3px #111;
-    -moz-box-shadow: 0 0 3px #111;
-    -webkit-box-shadow: 0 0 3px #111; }
+    cursor: pointer; }
   #loginPage .contentBubble #info_label, #loginPage .contentBubble #home_label, #profilePage .contentBubble #info_label, #profilePage .contentBubble #home_label,
   #editProfilePage .contentBubble #info_label,
   #editProfilePage .contentBubble #home_label {
@@ -394,7 +404,7 @@ html {
   text-shadow: none;
   cursor: pointer; }
 
-#loading_div {
+#loading_div, #alert_modal_wrapper {
   border-radius: 10px;
   -mox-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -402,7 +412,7 @@ html {
   background-color: #505050;
   padding: 30px; }
 
-#loading_text {
+#loading_text, #alert_modal_text {
   padding-top: 20px;
   font-size: 20px;
   color: white;
