--- a/app/css/main.css
+++ b/app/css/main.css
@@ -52,6 +52,12 @@ html {
   height: 80%;
   overflow: scroll;
   position: relative; }
+  #loginPage .contentBubble #login_button, #profilePage .contentBubble #login_button,
+  #editProfilePage .contentBubble #login_button {
+    display: inline-block;
+    text-align: center;
+    width: 80%;
+    padding-top: 10px; }
   #loginPage .contentBubble #login_button_internal, #profilePage .contentBubble #login_button_internal,
   #editProfilePage .contentBubble #login_button_internal {
     background: url("../assets/button_background.jpg");
@@ -201,7 +207,7 @@ html {
   position: relative;
   width: 70%;
   text-align: right;
-  margin: 20px 0px 30px 15%; }
+  margin: 20px 0px 30px 40px; }
   .navBar .navBtn {
     position: relative;
     display: inline-block;
@@ -268,11 +274,15 @@ html {
     background-color: rgba(120, 120, 120, 0.8);
     position: absolute;
     left: -5px;
+    right: -5px;
     text-align: center;
-    width: 100%;
     height: 30px;
     font-size: 150%;
-    overflow: visible;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    overflow-x: hidden;
     cursor: pointer; }
     #filterPage .contentBubble #rtnMapBtn h5 {
       position: relative;
@@ -387,7 +397,7 @@ html {
 
 .buttonWrapper {
   display: inline-block;
-  text-align: ceneter;
+  text-align: center;
   width: 80%;
   padding-top: 10px; }
 
