--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4,19 +4,13 @@
  *  @author Lucas Ray (ltray)
  *  @author Kenneth Murphy (kmmurphy)
  */
-/* imports
-@import "./jquery.mobile.custom.min.css";
-@import "./jquery.mobile.custom.structure.min.css";
-@import "./jquery.mobile.custom.theme.min.css";
-@import "./jquery-ui-1.9.2.custom.css":
-*/
 html {
   height: 100%;
   width: 100%; }
 
 .gsPage {
   font-family: Helvetica, sans-serif;
-  text-shadow: 0px 0px 0px #fff;
+  text-shadow: 0px 0px 0px white;
   height: 100%;
   width: 100%;
   margin: 0px;
@@ -37,9 +31,9 @@ html {
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
-  box-shadow: 0 0 8px #111;
-  -moz-box-shadow: 0 0 8px #111;
-  -webkit-box-shadow: 0 0 8px #111; }
+  box-shadow: 0 0 8px #111111;
+  -moz-box-shadow: 0 0 8px #111111;
+  -webkit-box-shadow: 0 0 8px #111111; }
   .contentBubble h1 {
     padding-top: 30px;
     font-size: 350%;
@@ -136,7 +130,7 @@ html {
   #loginPage .contentBubble #info_label, #loginPage .contentBubble #home_label, #profilePage .contentBubble #info_label, #profilePage .contentBubble #home_label,
   #editProfilePage .contentBubble #info_label,
   #editProfilePage .contentBubble #home_label {
-    font-family: 'Playfair Display SC', serif;
+    font-family: "Playfair Display SC", serif;
     font-style: italic;
     font-size: 35px;
     color: rgba(66, 71, 61, 0.7);
@@ -147,7 +141,7 @@ html {
     padding-bottom: 15px; }
   #loginPage .contentBubble .info_item, #profilePage .contentBubble .info_item,
   #editProfilePage .contentBubble .info_item {
-    font-family: 'Playfair Display SC', serif;
+    font-family: "Playfair Display SC", serif;
     width: 50%;
     font-size: 20px;
     display: inline-block;
@@ -170,7 +164,7 @@ html {
   #loginPage .contentBubble label, #profilePage .contentBubble label,
   #editProfilePage .contentBubble label {
     float: left;
-    font-family: 'Playfair Display SC', serif;
+    font-family: "Playfair Display SC", serif;
     color: rgba(36, 118, 237, 0.85);
     font-size: 20px;
     margin-top: 15px;
@@ -199,9 +193,9 @@ html {
   margin-left: 10%;
   width: 80%;
   height: 30px;
-  box-shadow: 0 0 2px #111;
-  -moz-box-shadow: 0 0 2px #111;
-  -webkit-box-shadow: 0 0 2px #111; }
+  box-shadow: 0 0 2px #111111;
+  -moz-box-shadow: 0 0 2px #111111;
+  -webkit-box-shadow: 0 0 2px #111111; }
 
 .navBar {
   position: relative;
@@ -410,9 +404,9 @@ html {
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
   background: url("../assets/button_background.jpg");
-  box-shadow: 0 0 3px #111;
-  -moz-box-shadow: 0 0 3px #111;
-  -webkit-box-shadow: 0 0 3px #111;
+  box-shadow: 0 0 3px #111111;
+  -moz-box-shadow: 0 0 3px #111111;
+  -webkit-box-shadow: 0 0 3px #111111;
   color: white;
   font-weight: normal;
   letter-spacing: 2px;
@@ -442,6 +436,42 @@ html {
 
 .bordered {
   border: solid thin #5a5a5a;
-  box-shadow: 0 0 3px #111;
-  -moz-box-shadow: 0 0 3px #111;
-  -webkit-box-shadow: 0 0 3px #111; }
+  box-shadow: 0 0 3px #111111;
+  -moz-box-shadow: 0 0 3px #111111;
+  -webkit-box-shadow: 0 0 3px #111111; }
+
+#propView .contentBubble {
+  height: 80%;
+  overflow: auto;
+  position: relative; }
+  #propView .contentBubble #closeBtn {
+    float: right;
+    cursor: pointer;
+    margin: 2px;
+    font-size: 150%;
+    color: #575757; }
+  #propView .contentBubble #title {
+    text-align: center;
+    padding: 30px; }
+  #propView .contentBubble ul {
+    text-align: left;
+    padding-left: 30px; }
+    #propView .contentBubble ul h2 {
+      font-size: 150%;
+      padding: 6px; }
+      #propView .contentBubble ul h2 span {
+        color: #575757;
+        font-size: 100%;
+        padding-left: 3px; }
+  #propView .contentBubble #addInfoBtn {
+    position: absolute;
+    bottom: 10px;
+    left: 44%;
+    text-align: center;
+    font-size: 150%;
+    color: #42473d;
+    cursor: pointer; }
+
+.moreInfoBtn {
+  color: #DCDCDC;
+  cursor: pointer; }
